added database function to scorecard + maps

--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -15,6 +15,7 @@
         android:text="@string/looking_for_clues"
         android:layout_gravity="center_horizontal"
         android:textSize="50dp"
+        android:textColor="#FFFFFF"
         android:textStyle="bold"
         android:layout_marginTop="20dp"
         android:id="@+id/looking" />
