--- a/app/src/main/res/layout/activity_clues.xml
+++ b/app/src/main/res/layout/activity_clues.xml
@@ -29,6 +29,13 @@
 
     </android.support.design.widget.TabLayout>
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/goBack"
+        android:onClick="goBack"
+        android:text="@string/goBack"
+        />
 
 
 
