--- a/app/src/main/res/layout/activity_clues.xml
+++ b/app/src/main/res/layout/activity_clues.xml
@@ -1,25 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_clues"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
+    android:gravity="center"
+    android:layout_gravity="center"
+    android:padding="15dp"
     tools:context="cs.nuim.maps.CluesActivity"
     android:background="@color/niceRed"
-    >
-
-    <android.support.v4.view.ViewPager
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/pager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+    android:weightSum="1">
 
     <android.support.design.widget.TabLayout
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         app:tabIndicatorColor="@color/niceGrey"
@@ -29,14 +23,23 @@
 
     </android.support.design.widget.TabLayout>
 
+    <android.support.v4.view.ViewPager
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/pager"
+        android:layout_width="wrap_content"
+        android:layout_height="429dp"
+        android:layout_weight="0.45" />
+
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/goBack"
+        android:textSize="24sp"
+        android:padding="10dp"
         android:onClick="goBack"
+        android:background="@drawable/buttonclick"
         android:text="@string/goBack"
         />
 
 
-
-</RelativeLayout>
+</LinearLayout>
