--- a/app/src/main/res/layout/fragment_layout_place.xml
+++ b/app/src/main/res/layout/fragment_layout_place.xml
@@ -20,10 +20,14 @@
         android:textColor="#FFFFFF"
         android:textAlignment="center" />
 
-    <ImageView
-        android:layout_width="334dp"
-        android:layout_height="332dp"
-        android:src="@drawable/question2"
-        android:id="@+id/imageView"
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/crimesign"
+        android:text="\?"
+        android:gravity="center"
+        android:padding="30dp"
+        android:textSize="100sp"
+        android:background="@drawable/layout_bg"
         android:layout_marginTop="30dp"/>
 </LinearLayout>
