--- a/app/src/main/res/drawable/bgpressed.xml
+++ b/app/src/main/res/drawable/bgpressed.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <stroke android:color="#000000" android:width="5dip" />
+    <stroke android:color="#000000" android:width="6dip" />
     <gradient
-        android:angle="90"
-        android:startColor="#ffffff"
-        android:endColor="#404040"
+        android:angle="270"
+        android:startColor="#D0D0D0"
+        android:endColor="#333333"
         android:type="linear"
         />
 </shape>
