--- a/app/src/main/res/drawable/returnbutton.xml
+++ b/app/src/main/res/drawable/returnbutton.xml
@@ -4,7 +4,7 @@
     <shape android:shape="rectangle">
         <corners android:radius="7dip" />
         <gradient android:angle="90"
-            android:startColor="#ca4541"
+            android:startColor="#000000"
             android:endColor="@color/niceRed"/>
         <stroke android:color="#000000" android:width="5dip" />
     </shape>
