--- a/app/src/main/res/layout/activity_close.xml
+++ b/app/src/main/res/layout/activity_close.xml
@@ -6,21 +6,23 @@
     android:layout_height="fill_parent"
     android:orientation="vertical"
     android:padding="20dp"
-    android:gravity="center"
+    android:gravity="center_horizontal"
     android:background="@color/niceRed">
 
     <RelativeLayout android:background="@drawable/bg"
         android:padding="7dp"
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center">
+        android:layout_height="match_parent">
         <ImageView
-            android:layout_centerHorizontal="true"
             android:id="@+id/clueFound"
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="20dp"
+            android:layout_above="@+id/foundText"
+            android:layout_centerInParent="true"
             android:adjustViewBounds="true"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="match_parent" />
 
         <TextView
             android:id="@+id/foundText"
@@ -30,9 +32,9 @@
             android:textColor="#000000"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="35dp"
-            android:layout_below="@+id/clueFound"
-            android:layout_centerHorizontal="true" />
+            android:layout_above="@+id/returnButton"
+            android:layout_marginTop="10dp"
+            android:layout_centerInParent="true" />
 
         <Button
             android:textSize="10dp"
@@ -42,9 +44,10 @@
             android:background="@drawable/returnbutton"
             android:textColor="#FFFFFF"
             android:id="@+id/returnButton"
-            android:layout_below="@+id/foundText"
-            android:layout_centerHorizontal="true"
+            android:layout_alignParentBottom="true"
+            android:layout_centerInParent="true"
             android:padding="10dp"
+            android:layout_marginBottom="10dp"
             android:layout_marginTop="12dp" />
     </RelativeLayout>
 </LinearLayout>
