--- a/app/src/main/res/layout/activity_rules.xml
+++ b/app/src/main/res/layout/activity_rules.xml
@@ -1,13 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_rules"
+    android:id="@+id/activity_story"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="cs.nuim.maps.RulesActivity">
+    android:padding="20dp"
+    android:orientation="vertical"
+    android:layout_gravity="center"
+    android:gravity="center"
+    android:background="@color/niceRed"
+    tools:context="cs.nuim.maps.RulesActivity"
+    android:weightSum="1">
+
+    <TextView
+        android:layout_alignParentTop="true"
+        android:layout_centerInParent="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="RULES"
+        android:textSize="35sp"
+        android:textColor="#FFFFFF"
+        android:id="@+id/titleRules"/>
+
+    <TextView
+        android:layout_below="@id/titleRules"
+        android:text="@string/ruleText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:id="@+id/textRules"
+        android:textStyle="bold"
+        android:textColor="#000000"
+        android:padding="15dp"
+        android:background="@drawable/layout_bg"
+        android:textSize="25sp"
+        android:layout_above="@+id/buttonPlayRules"
+        android:scrollbars="vertical"
+        android:layout_weight="0.23" />
+
+    <Button
+        android:layout_alignParentBottom="true"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="30dp"
+        android:text="@string/play"
+        android:textSize="30sp"
+        android:onClick="toGame"
+        android:background="@drawable/buttonclick"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/buttonPlayRules" />
+
 
 </RelativeLayout>
