--- a/app/src/main/res/layout/activity_story.xml
+++ b/app/src/main/res/layout/activity_story.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_story"
     android:layout_width="match_parent"
@@ -13,6 +13,8 @@
     android:weightSum="1">
 
     <TextView
+        android:layout_alignParentTop="true"
+        android:layout_centerInParent="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/what_happened"
@@ -21,10 +23,13 @@
         android:id="@+id/titleStory"/>
 
     <TextView
-        android:text="Foreword by the inventor's daughter. Was it Professor Plum with the candlestick in the library or Reverend Green with the revolver in the study? Amateur detectives have been creeping around the corridors and secret passages of Tudor Close, solving the murder of the mysterious Dr Black, since 1949. The Story of Cluedo tells how a quiet and unassuming musician from Birmingham invented the world's first murder mystery board game. Through an engaging and very readable narrative based on extensive research and conversations with the inventor's daughter, including never before published photographs and other material from the inventor's personal archive, Jonathan Foster traces the origins of Cluedo. From its beginnings in the early twentieth century through the Second World War, to its enduring popularity in the post-war decades and the game's current status as a permanent fixture "
-        android:layout_width="318dp"
-        android:layout_height="384dp"
+        android:text="@string/storyText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/buttonPlay"
+        android:layout_below="@id/titleStory"
         android:layout_marginTop="30dp"
+        android:textColor="#000000"
         android:id="@+id/textStory"
         android:textStyle="bold"
         android:padding="15dp"
@@ -34,6 +39,8 @@
         android:layout_weight="0.23" />
 
     <Button
+        android:layout_alignParentBottom="true"
+        android:layout_centerInParent="true"
         android:layout_marginTop="30dp"
         android:text="@string/play"
         android:textSize="30sp"
@@ -44,4 +51,4 @@
         android:id="@+id/buttonPlay" />
 
 
-</LinearLayout>
+</RelativeLayout>
