--- a/app/src/main/res/layout/activity_end.xml
+++ b/app/src/main/res/layout/activity_end.xml
@@ -17,8 +17,9 @@
         android:layout_height="wrap_content"
         android:text="Mystery at Maynooth"
         android:textStyle="bold"
+        android:id="@+id/titleMystery"
         android:layout_marginBottom="10dp"
-        android:textSize="30dp"/>
+        android:textSize="50dp"/>
     <LinearLayout
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -35,10 +36,13 @@
             android:layout_height="wrap_content"
             android:layout_gravity="left"
             android:textStyle="bold"
+            android:id="@+id/weapon"
+            android:textSize="30dp"
             android:text="Weapon used?"/>
         <Spinner
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
             android:id="@+id/spinnerweapon"
             android:background="@color/niceGrey"
             android:entries="@array/weapons_array" />
@@ -46,17 +50,20 @@
         <Space
             android:layout_width="1dp"
             android:layout_height="0dp"
-            android:layout_weight="3" >
+            android:layout_weight="1" >
         </Space>
         <TextView
             android:layout_gravity="left"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textStyle="bold"
+            android:id="@+id/murderer"
+            android:textSize="30dp"
             android:text="Murderer?"/>
         <Spinner
             android:background="@color/niceGrey"
             android:layout_width="wrap_content"
+            android:layout_marginTop="20dp"
             android:layout_height="wrap_content"
             android:id="@+id/spinnersuspect"
             android:entries="@array/suspects_array" />
